ncc/testsuite/positive/array-prop.n
module M {
  Main () : void {
    def x = array [1,2,3];
    when (x.Length == 3) 
      System.Console.WriteLine ("OK");
	_ = System.Console.ReadLine();
  }
}

/*
BEGIN-OUTPUT
OK
END-OUTPUT
*/
