ncc/testsuite/negative/valuetype-conv.n
class X {

  public foo['a] (_x : array['a]) : void
  {
  }

  public bar () : void
  {
    foo (array ["foo", "bar"]); // OK
    foo (array [1, 2, 3]); // E: attempting to cast
    foo (array [1 : object, 2, 3]); // OK
    foo (array [1.0, 2.3]); // E: attempting to cast
  }
}
